[metadata]
description-file=README.md
license_files=LICENSE.rst
name = pyenv-loader
version = 0.1
author = Prakash Leon Mishra
author_email = dev.leonmishra@gmail.com
description = A simple Package to load & parse configuration to diffrent datatypes
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/rionzz-inc/pyenv-loader
project_urls =
	Bug Tracker = https://github.com/rionzz-inc/pyenv-loader/issues
	repository = https://github.com/rionzz-inc/pyenv-loader
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent

[options]
package_dir =
	= pyenv_loader
packages = find:
python_requires = >=3.0

[options.packages.find]
where = pyenv_loader